@@ -1,1 +1,2 @@
+set MAVEN_OPTS="-XX:MaxPermSize=1024m" 
 mvn clean tomcat7:run
